testsuite/tests/typecheck/should_fail/tcfail221.hsig
module ShouldFail where
instance Show Int
instance Show Int
